--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.21.2",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide": "^0.469.0",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.9.5",
