--- a/vercel.json
+++ b/vercel.json
@@ -18,20 +18,16 @@
     },
     {
       "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|svg|gif))",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        },
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        }
-      ],
       "dest": "/$1"
     },
     {
       "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
       "headers": [
         {
           "key": "Content-Security-Policy",
@@ -53,8 +49,16 @@
           "key": "Permissions-Policy",
           "value": "geolocation=(), camera=(), microphone=(), payment=()"
         }
-      ],
-      "dest": "/index.html"
+      ]
+    },
+    {
+      "source": "/(.*\\.(js|css|ico|png|jpg|jpeg|svg|gif))",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
     }
   ]
 }
