--- a/vercel.json
+++ b/vercel.json
@@ -42,7 +42,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(js|css|ico|png|jpg|jpeg|svg|gif))",
+      "source": "/(.+)\\.(.+)",
       "headers": [
         {
           "key": "Cache-Control",
